# boats

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  uwsgi.ini
boats/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
boats/vessel/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
boats/vessel/migrations/: 0001_initial.py
